test: add e2e ui tests

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "build": "npm run format && npm run lint && tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "lint": "eslint --ext .js,.ts .",
+    "cypress": "npx cypress run",
+    "lint": "npx eslint ./src",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
+    "cypress": "^13.14.2",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
